--- a/app-config.yaml
+++ b/app-config.yaml
@@ -9,9 +9,10 @@ backend:
   # Used for enabling authentication, secret is shared by all backend plugins
   # See https://backstage.io/docs/auth/service-to-service-auth for
   # information on the format
-  # auth:
-  #   keys:
-  #     - secret: ${BACKEND_SECRET}
+  auth:
+    dangerouslyDisableDefaultAuthPolicyt: true
+    # keys:
+    #   - secret: ${BACKEND_SECRET}
   baseUrl: http://localhost:7007
   listen:
     port: 7007
@@ -32,6 +33,22 @@ backend:
     connection: ':memory:'
   # workingDirectory: /tmp # Use this to configure a working directory for the scaffolder, defaults to the OS temp-dir
 
+# mta:
+#   url: https://mta-openshift-mta.apps.shurley-virt.rep1.p1.openshiftapps.com
+#   providerAuth:
+#     realm: mta
+#     secret: qOQJZjS4JXgmohi7PCZ1KxfuQyCJjPtF
+#     clientID: backstage-provider
+
+mta:
+  # url: https://mta-openshift-mta.apps.shurley-virt.rep1.p1.openshiftapps.com
+  url: https://mta-openshift-mta.ibolton-dev-cluster-3626522b15eedb880d7b99992e225c1b-0000.us-east.containers.appdomain.cloud
+  providerAuth:
+    realm: mta
+    secret: naZhPrAmJGeDSdrKzjGjcOlnhV4hf7FQ
+    clientID: backstage-provider
+  visibility: frontend
+
 integrations:
   github:
     - host: github.com
@@ -44,6 +61,9 @@ integrations:
     #   token: ${GHE_TOKEN}
 
 proxy:
+  skipInvalidProxies: true
+  endpoints:
+    {}
   ### Example for how to add a proxy endpoint for the frontend.
   ### A typical reason to do this is to handle HTTPS and CORS for internal services.
   # endpoints:
@@ -66,9 +86,12 @@ auth:
   # see https://backstage.io/docs/auth/ to learn about auth providers
   providers:
     # See https://backstage.io/docs/auth/guest/provider
-    guest: {}
+    guest:       
+      dangerouslyAllowOutsideDevelopment: true
 
-scaffolder:
+  environment: development
+
+scaffolder: {}
   # see https://backstage.io/docs/features/software-templates/configuration for software template options
 
 catalog:
